--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 GOOD LUCK!
-<img src="https://krasivosti.pro/uploads/posts/2021-04/1618037892_7-p-mini-sobachki-sobaki-krasivo-foto-9.jpg">
+<img src="htfile:///C:/Users/%D0%A2%D0%B0%D1%82%D1%8C%D1%8F%D0%BD%D0%B0/Desktop/%D0%BE%D0%B1%D0%BE%D0%B8/index.html
